# Primal-Arcade

./: app.py  init_db.py  pyproject.toml  schema.py  server.py  utility.py
static/: contentsections.js  mainpage.css  mutationspage.css  mutationspage.js  normalize.css  welcomepage.css
templates/: mainpage.html  mutationspage.html  welcomepage.html
